added missing validations